updated the style

--- a/templates/weather/index.html.twig
+++ b/templates/weather/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Weather Information{% endblock %}
+{% block title %}Інформація про погоду{% endblock %}
 
 {% block body %}
     <div class="container mt-5">
-        <h1>Weather Information</h1>
+        <h1>Інформація про погоду</h1>
 
         {% for message in app.flashes('error') %}
             <div class="alert alert-danger">
@@ -14,10 +14,10 @@
 
         <form action="{{ path('weather_show') }}" method="get" class="mt-4">
             <div class="form-group">
-                <label for="city">Enter City Name:</label>
+                <label for="city">Введіть назву міста:</label>
                 <input type="text" name="city" id="city" class="form-control" required>
             </div>
-            <button type="submit" class="btn btn-primary mt-3">Get Weather</button>
+            <button type="submit" class="btn btn-primary mt-3">Отримати погоду</button>
         </form>
     </div>
 {% endblock %} 
